# terminal-magic-cli

./: Cargo.toml  README.md  database.sh  plugintest.toml
src/: cli.yaml  git.rs  lib.rs  main.rs  models.rs  prompts.rs  template.rs
src/modules/: install.rs  mod.rs  update.rs
