[package]
name = "terminal-magic"
version = "0.5.2"
authors = ["Systems @ Ubique <backend@ubique.ch>"]
edition = "2018"
description = "Package to organize shell extensions andd scripts"
license = "Apache-2.0"
repository = "https://github.com/Ubique-OSS/terminal-magic-cli"
homepage = "https://github.com/Ubique-OSS/terminal-magic-cli"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5.9"
serde = { version = "1.0.137", features = ["derive"] }
mustache = "0.9.0"
prompts = "0.1.0"
async-std = { version = "1.12.0", features = ["attributes"] }
dirs = "4.0.0"
colored = "2.0.0"
diff = "0.1.12"
shellexpand = "2.1.0"
indexmap = { version = "1.9.1", features = ["serde-1"] }
git2 = "0.14.4"
regex = "1.5.6"
semver = "1.0.10"
structopt = "0.3.26"
